deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-internal-service
spec:
  selector:
    app: mariadb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306


---
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  selector:
    app: mariadb
  type: LoadBalancer # port type
  ports:
    - protocol: TCP
      port: 8000 # same port of a service as for a pods
      targetPort: 8000 # targeting containerPort
      nodePort: 30105 # external IP port from 30000 till 32767 range
