service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: django
  name: django
  namespace: default
spec:
  ports:
  - port: 8000 # port exposed by the pod/deployment
    protocol: TCP
    targetPort: 8000 # port exposed by the intenal
    nodePort: 30001 # port exposed to internet
  selector:
    run: django
  sessionAffinity: None
  type: LoadBalancer  # ClusterIP, NodePort, LoadBalancer, ExternalName
